--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -1,13 +1,20 @@
 .pg-background {
     background-color: #f0f0f0;
 }
+.gray-border {
+    border: 5px solid #e6e6e6;
+}
 
-.myrounded-circle {
+.mybigrounded-circle {
     width: 105px;
     height: 105px;
     border: solid;
     border-width: 5px;
     color: white;
+}
+.mysmrounded-circle {
+    width: 18px;
+    height: 18px;
 }
 
 .circle-red {
