--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -8,8 +8,7 @@
 .mybigrounded-circle {
     width: 105px;
     height: 105px;
-    border: solid;
-    border-width: 5px;
+    border: 5px solid;
     color: white;
 }
 .mysmrounded-circle {
