--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -10,6 +10,9 @@
     height: 105px;
     border: 5px solid;
     color: white;
+    font-weight: bold;
+    margin: 1em;
+
 }
 .mysmrounded-circle {
     width: 18px;
