--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -10,13 +10,17 @@
     height: 105px;
     border: 5px solid;
     color: white;
-    font-weight: bold;
+    font-weight: bolder;
     margin: 1em;
 
 }
 .mysmrounded-circle {
     width: 18px;
     height: 18px;
+    font-family: 'Anton', sans-serif;
+    font-weight: bolder;
+    justify-content: center;
+    font-size: small;
 }
 
 .circle-red {
