--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -8,7 +8,10 @@
     height: 55px;
     width: 55px;
 }
-
+.anton {
+    font-family: 'Anton', sans-serif;
+    font-weight: bolder;
+}
 .mybigrounded-circle {
     width: 105px;
     height: 105px;
