assigned font family from top-to-bottom

--- a/css/cu-design.css
+++ b/css/cu-design.css
@@ -12,6 +12,10 @@
     font-family: 'Anton', sans-serif;
     font-weight: bolder;
 }
+
+.abel {
+    font-family: 'Abel', sans-serif;
+}
 .mybigrounded-circle {
     width: 105px;
     height: 105px;
